--- a/platformio.ini
+++ b/platformio.ini
@@ -14,8 +14,8 @@ board = raspberry-pi-pico-w
 framework = baremetal
 
 
-build_unflags = -D PICO_STDIO_UART
-build_flags = -D PICO_CYW43_ARCH_POLL -D PICO_STDIO_USB
+build_unflags = -D PICO_STDIO_UART  ;-fno-exceptions
+build_flags = -D PICO_CYW43_ARCH_POLL -D PICO_STDIO_USB ;-fexceptions
 board_build.use_usb = 1 ; 0 (if serial via UART)
 
 monitor_port = COM12
